--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Vinay Somawat - Computer Science Portfolio Webpage</title>
+      <title>>Rupesh - Computer Science Undergrad, IIT Bombay</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="description" content="Portfolio webpage of Vinay Somawat" />
       <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
-      <meta name="author" content="Vinay Somawat" />
+      <meta name="author" content="Rupesh" />
       <!--Social Media icons--> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-      <link rel="icon" type="image/png" href="logo.png">
+      <link rel="icon" type="image/png" href="https://rupesh.info/assets/img/favicon.png">
       <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Raleway&display=swap" rel="stylesheet">
@@ -29,8 +29,29 @@
       <!-- Modernizr JS -->
       <script src="js/modernizr-2.6.2.min.js"></script>
        
-       <!-----Google adsense code---->
-       <script data-ad-client="ca-pub-4767382980457301" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+       <!--   Google Adsense -->
+<script data-ad-client="ca-pub-5327947672777463" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+   
+</script>
+<!--   End ad -->
+
+
+  
+<!-- Google Analytics -->
+<script>
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+  ga('create', 'UA-147852058-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
+
+
+
    </head>
    <body>
        <canvas id="canvas"></canvas>
@@ -40,8 +61,8 @@
             <!----Side bar--->
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
-                  <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                  <h1 id="colorlib-logo"><a href="https://vinaysomawat.github.io">Vinay Somawat</a></h1>
+                  <div class="author-img" style="background-image: url(https://rupesh.info/assets/img/profil-smallest.png);"></div>
+                  <h1 id="colorlib-logo"><a href="https://rupesh.info/">Rupesh</a></h1>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
                   <div id="navbar" class="collapse">
@@ -55,7 +76,7 @@
                </nav>
             </aside>
             <!--- Github ribbon ----------->
-            <a href="https://github.com/vinaysomawat/vinaysomawat.github.io" class="github-corner" aria-label="View source on GitHub">
+            <a href="https://github.com/rs9899/webCV" class="github-corner" aria-label="View source on GitHub">
                <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
                   <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
                   <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
@@ -91,8 +112,8 @@
                                  <div class="about-desc">
                                     <h1><strong>Vinay <span style="color: #FACD69">Somawat</span></strong></h1>
                                     <hr>
-                                     <p>Hi, Welcome to my portfolio.</p>
-                                    <p>I'm a software developer engineer and computer science undergraduate student at National Institute of Technology, Warangal.</p>
+                                     <p>Hi, Welcome to my interactive Curriculum Vitae.</p>
+                                    <p>I'm a data science engineer and undergraduate student at Indian Institute of Technology, Bombay, major in Computer Science and minor in Statistics.</p>
                                  </div>
                               </div>
                            </div>
