--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>>Rupesh - Computer Science Undergrad, IIT Bombay</title>
+      <title>Rupesh - Computer Science Undergrad, IIT Bombay</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="description" content="Portfolio webpage of Vinay Somawat" />
       <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
@@ -110,7 +110,7 @@
                            <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                               <div class="col-md-12">
                                  <div class="about-desc">
-                                    <h1><strong>Vinay <span style="color: #FACD69">Somawat</span></strong></h1>
+                                    <h1><strong>Rupesh</span></strong></h1>
                                     <hr>
                                      <p>Hi, Welcome to my interactive Curriculum Vitae.</p>
                                     <p>I'm a data science engineer and undergraduate student at Indian Institute of Technology, Bombay, major in Computer Science and minor in Statistics.</p>
