--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                            <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                  <div class="hire">
-                                    <h2>You will be happy to know that I have completed over 20+ projects successfully!</h2>
+                                    <h2>You will be happy to know that I have completed over 30+ projects successfully!</h2>
 <!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                                  </div>
                               </div>
@@ -287,13 +287,13 @@
                            <h1>GitHub Profile Languages <span style="color: #f9bf3f">Pie Chart</span></h1>
                             </div>
                      </div>
-                      <iframe width="600" height="600" src="https://ionicabizau.github.io/github-profile-languages/api.html?vinaysomawat" frameborder="0"></iframe>
+                      <iframe width="600" height="600" src="https://ionicabizau.github.io/github-profile-languages/api.html?rs9899" frameborder="0"></iframe>
                       <br>
                       <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
                      <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"/>
                      <div class="calendar"></div>
                      <script>
-                        GitHubCalendar(".calendar", "vinaysomawat", { responsive: true });
+                        GitHubCalendar(".calendar", "rs9899", { responsive: true });
                     </script>
                     </div>
                 </section>
