--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>Rupesh - Computer Science Undergrad, IIT Bombay</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+      <meta name="description" content="Interactive CV of Rupesh" />
       <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
       <meta name="author" content="Rupesh" />
       <!--Social Media icons--> 
@@ -421,7 +421,7 @@
                               <div class="about-desc">
                                <h1>Contact</h1>
                                </div>
-                              <p>On the off chance that you might want to connect with me, be it for investigating innovation, business, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: vinaysomawat@hotmail.com">vinaysomawat@hotmail.com</a></strong></p>
+                              <p>On the off chance that you might want to connect with me, be it for hiring, business, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: rupesh95903@gmail.com">rupesh95903@gmail</a></strong>. Always welcome for a discussion.</p>
                                <br>
                                <p class="capsule"><strong><a href="https://github.com/vinaysomawat/angular">Angular Version of this portfolio site.</a></strong></p>
                            </div>
@@ -436,18 +436,16 @@
                         <div class="col-md-12">
                            <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                               <div class="hire">
-                                 <p style="text-align: center"><strong>If you like my work and efforts, please consider buying me a coffee.<br>Thank you for your support!</strong></p>
                                  <div align=center>
                                     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
-                                    <a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/r194dME8y"><img src="https://bmc-cdn.nyc3.digitaloceanspaces.com/BMC-button-images/BMC-btn-logo.svg" alt="Buy me a coffee"><span style="margin-left:5px">Buy me a coffee</span></a>
                                     <br><br>
-                                    <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/Vinay_Somawat" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.linkedin.com/in/vinasomawat/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.quora.com/profile/Vinay-Somawat" style="color: black;" class="fa fa-quora"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://github.com/vinaysomawat" style="color: black;" class="fa fa-github"></a>
+                                    <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/RUPESH5903" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://www.linkedin.com/in/rupesh-r-0418a399" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://www.quora.com/profile/Rupesh-134" style="color: black;" class="fa fa-quora"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://github.com/rs9899" style="color: black;" class="fa fa-github"></a>
                                     </p>
                                  </div>
-                                 <p style="text-align: center; margin-bottom: -20px;"><strong>&copy; No Copyrights, feel free to use this template.</strong></p>
+                                 <p style="text-align: center; margin-bottom: -20px;"><strong>&copy; Template by <a href="https://github.com/vinaysomawat/vinaysomawat.github.io">vinaysomawat</a>.</strong></p>
                               </div>
                            </div>
                         </div>
