--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                  </div>
                               </div>
                            </div>
-                           <div class="row">
+                   <!--         <div class="row">
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                                  <a href="competitiveProgramming.html" target="_blank">
                                     <div class="services color-5">
@@ -151,11 +151,10 @@
                                  </a>
                               </div>
                            </div>
-                           <div class="row">
+ -->                           <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                  <div class="hire">
                                     <h2>You will be happy to know that I have completed over 30+ projects successfully!</h2>
-<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                                  </div>
                               </div>
                            </div>
@@ -168,7 +167,7 @@
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-                           <!--	<span class="heading-meta">My Specialty</span> -->
+
                             <div class="about-desc">
                            <h1>Skills</h1>
                             </div>
@@ -187,23 +186,12 @@
                               </div>
                            </div>
                         </div>
-                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">MongoDB/ExpressJS/Angular/NodeJS</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-6" role="progressbar" aria-valuenow="50"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:50%">
-                                    <span>50%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <h3 style="font-weight: 500;">Python/Django/MySQL</h3>
                               <div class="progress">
                                  <div class="progress-bar color-2" role="progressbar" aria-valuenow="40"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                                    aria-valuemin="0" aria-valuemax="100" style="width:30%">
                                     <span>40%</span>
                                  </div>
                               </div>
@@ -225,7 +213,7 @@
                               <h3 style="font-weight: 500;">Bootstrap/HTML/JavaScript</h3>
                               <div class="progress">
                                  <div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                    aria-valuemin="0" aria-valuemax="100" style="width:60%">
                                     <span>70%</span>
                                  </div>
                               </div>
@@ -233,10 +221,10 @@
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Java/Android/Spring-boot</h3>
+                              <h3 style="font-weight: 500;">Linux/bash</h3>
                               <div class="progress">
                                  <div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:50%">
+                                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
                                     <span>50%</span>
                                  </div>
                               </div>
@@ -244,10 +232,10 @@
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Word/Excel/Photoshop</h3>
+                              <h3 style="font-weight: 500;">Pytorch/Tensorflow</h3>
                               <div class="progress">
                                  <div class="progress-bar color-6" role="progressbar" aria-valuenow="50"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:50%">
+                                    aria-valuemin="0" aria-valuemax="100" style="width:80%">
                                     <span>50%</span>
                                  </div>
                               </div>
@@ -255,10 +243,10 @@
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Git/Trello/Postman/ChromeDevTools</h3>
+                              <h3 style="font-weight: 500;">Numpy/Pandas/Matplotlib</h3>
                               <div class="progress">
                                  <div class="progress-bar color-7" role="progressbar" aria-valuenow="70"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                    aria-valuemin="0" aria-valuemax="100" style="width:90%">
                                     <span>70%</span>
                                  </div>
                               </div>
@@ -266,7 +254,7 @@
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Documentation Writing/Communication</h3>
+                              <h3 style="font-weight: 500;">Git/Latex</h3>
                               <div class="progress">
                                  <div class="progress-bar color-3" role="progressbar" aria-valuenow="80"
                                     aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -313,28 +301,39 @@
                      <div class="row">
                         <div class="col-md-12">
                            <div class="timeline-centered">
-<!--
+
                               <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
                                  <div class="timeline-entry-inner">
                                     <div class="timeline-icon color-5">
                                        <i class="fa fa-user"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2><a href="#">Geeksforgeeks</a> <span>July 2019 - Present</span></h2>
-                                       <p><strong><a href="https://auth.geeksforgeeks.org/user/somawatvinay/profile">Campus Ambassador</a></strong><br> To engage in outreach to students at the campus about Geeksforgeeks’s study content, courses, opportunities, and to support all campus workshops by Geeksforgeeks.</p>
+                                       <h2><a href="#">Tower Research Capital</a> <span>May-July'19</span></h2>
+                                       <p><strong>Alpha prediction for Aggressive Trading</strong><br>
+                                       <ul>
+                                          <li>Predicting the signals corresponding to the prices of a given product after various timesteps using multiple machine learning and data processing algorithms.</li>
+                                          <li>Converting the predictions into buy-sell triggers for the market using simple taking strategies.</li>
+                                          <li>Cross comparing various signals and learning algorithms to investigate the reasons for success and failures on various metrics like R2 Score, P&L value, Volume Traded, Overfitting.</li>
+                                       </ul> 
+                                    </p>
                                        <p></p>
                                     </div>
                                  </div>
                               </article>
--->
+
                               <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
                                  <div class="timeline-entry-inner">
                                     <div class="timeline-icon color-1">
                                        <i class="fa fa-code"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2><a href="#">ThinkPedia LLP</a> <span>May 2019 - June 2019</span></h2>
-                                       <p><strong>Software Developement Engineering Intern</strong><br>Developed Customer Web Application for social media management from scratch.<br>Designed frontend with Angular 7 and backend services with Java framework spring-boot. Worked in System Design, System Testing, API Integration and Cloud Services for the deployment and production of the application.</p>
+                                       <h2><a href="#">Edfora</a> <span>December’18</span></h2>
+                                       <p><strong>Optimising Community Forum</strong><br>
+                                          <ul>
+                                             <li>Added Radis Catching as middleware between query and response to improve the response time.</li>
+                                             <li>Improved the feed ranking by modifying the post scoring algorithm similar to that of Reddit</li>
+                                             <li>Added an RNN based classifier to suggest a topic to each feed entry.    </li>
+                                          </ul></p>
                                        <p></p>
                                     </div>
                                  </div>
@@ -345,8 +344,14 @@
                                        <i class="fa fa-globe"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2><a href="#">Fossasia Organization</a> <span>December 2018 - April 2019 </span></h2>
-                                       <p><strong>Open Source Contributor</strong><br>Contributed in projects Badgeyay, OpenEvent Frontend, account.susi.ai. <br>Raised 13 pull requests and 10+ front-end and backend issues. Also reviewed, perfected and pushed the codes of other developers in production.</p>
+                                       <h2><a href="#">Indiana University, USA</a> <span>May-July’18 </span></h2>
+                                       <p><strong>Big Data Applications and Systems </strong> Under Prof. Geoffrey C. Fox<br>
+                                          <i>Worked Remotely</i>
+                                          <ul>
+                                             <li>Investigating current and future use cases of Big Data in various fields.</li>
+                                             <li>Understanding MapReduce and resource management in Hadoop along with running test programs.</li>
+                                             <li>Detailed study of specific use cases of Big Data analytics such as recommender systems and Large-scale neural networks distributed in a MapReduce framework.</li>
+                                          </ul></p>
                                     </div>
                                  </div>
                               </article>
@@ -382,7 +387,10 @@
                                     </div>
                                     <div class="timeline-label">
                                        <h2>Bachelors in Computer Science and Engineering</h2>
-                                       <p><strong>National Institute of Technology, Warangal</strong><br>Courses undertaken Data Strucutures and Algorithms, Operating Systems, Database Management Systems, Networks, Distributed Computing, Object Oriented Programming, Computer Architecture.</p>
+                                       <p><strong>Indian Institute of Technology, Bombay</strong><br>
+                                       Courses undertaken Data Strucutures and Algorithms, Operating Systems, Database Management Systems, Advanced Machine Learning, Computer Vision, Medical Image Computing, Reinforcement Learning. <br>
+                                       <strong>CGPA : 9.6</strong>
+                                    </p>
                                        <p></p>
                                     </div>
                                  </div>
@@ -395,14 +403,27 @@
                                     </div>
                                     <div class="timeline-label">
                                        <h2>Intermediate</h2>
-                                       <p><strong>Board of Secondary Education, Rajasthan</strong><br>Courses undertaken Physics, Chemistry and Mathematics.</p>
+                                       <p><strong>Central Board of Secondary Education</strong><br>
+                                          <b> L. B. S. School, R. K. Puram, New Delhi </b> <br>
+                                       Key courses undertaken Physics, Chemistry, Mathematics.<br>
+                                       <strong> Percentage = 96.6% </strong>
+                                    </p>
                                     </div>
                                  </div>
                               </article>
 
                               <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
                                  <div class="timeline-entry-inner">
-                                    <div class="timeline-icon color-none">
+                                    <div class="timeline-icon color-5">
+                                       <i class="fa fa-user"></i>
+                                    </div>
+                                    <div class="timeline-label">
+                                       <h2>Matriculation</h2>
+                                       <p><strong>Central Board of Secondary Education</strong><br>
+                                          <b> RK Mission Vidyapith, Deoghar </b> <br>
+                                       Key courses undertaken Science, Sanskrit, Mathematics, English, Social Science.<br>
+                                       <strong> CGPA = 10 </strong>
+                                    </p>
                                     </div>
                                  </div>
                               </article>
@@ -422,8 +443,6 @@
                                <h1>Contact</h1>
                                </div>
                               <p>On the off chance that you might want to connect with me, be it for hiring, business, or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: rupesh95903@gmail.com">rupesh95903@gmail</a></strong>. Always welcome for a discussion.</p>
-                               <br>
-                               <p class="capsule"><strong><a href="https://github.com/vinaysomawat/angular">Angular Version of this portfolio site.</a></strong></p>
                            </div>
                         </div>
                      </div>
