--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                            <div class="progress-wrap">
                               <h3 style="font-weight: 500;">Algorithms/C++(STL)</h3>
                               <div class="progress">
-                                 <div class="progress-bar color-1" role="progressbar" aria-valuenow="70"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                 <div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:80%">
                                     <span>70%</span>
                                  </div>
                               </div>
@@ -191,7 +191,7 @@
                               <h3 style="font-weight: 500;">Python/Django/MySQL</h3>
                               <div class="progress">
                                  <div class="progress-bar color-2" role="progressbar" aria-valuenow="40"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:30%">
+                                    aria-valuemin="0" aria-valuemax="100" style="width:40%">
                                     <span>40%</span>
                                  </div>
                               </div>
@@ -210,10 +210,10 @@
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Bootstrap/HTML/JavaScript</h3>
+                              <h3 style="font-weight: 500;">CSS/HTML/JavaScript</h3>
                               <div class="progress">
                                  <div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
                                     <span>70%</span>
                                  </div>
                               </div>
@@ -224,7 +224,7 @@
                               <h3 style="font-weight: 500;">Linux/bash</h3>
                               <div class="progress">
                                  <div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                    aria-valuemin="0" aria-valuemax="100" style="width:50%">
                                     <span>50%</span>
                                  </div>
                               </div>
@@ -234,7 +234,7 @@
                            <div class="progress-wrap">
                               <h3 style="font-weight: 500;">Pytorch/Tensorflow</h3>
                               <div class="progress">
-                                 <div class="progress-bar color-6" role="progressbar" aria-valuenow="50"
+                                 <div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
                                     aria-valuemin="0" aria-valuemax="100" style="width:80%">
                                     <span>50%</span>
                                  </div>
@@ -245,7 +245,7 @@
                            <div class="progress-wrap">
                               <h3 style="font-weight: 500;">Numpy/Pandas/Matplotlib</h3>
                               <div class="progress">
-                                 <div class="progress-bar color-7" role="progressbar" aria-valuenow="70"
+                                 <div class="progress-bar color-7" role="progressbar" aria-valuenow="90"
                                     aria-valuemin="0" aria-valuemax="100" style="width:90%">
                                     <span>70%</span>
                                  </div>
