--- a/index.html
+++ b/index.html
@@ -117,41 +117,41 @@
                                  </div>
                               </div>
                            </div>
-                   <!--         <div class="row">
+                           <div class="row">
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="competitiveProgramming.html" target="_blank">
+                                 <a href="https://rupesh.info/" target="_blank">
                                     <div class="services color-5">
                                        <span class="icon2"><i class="fa fa-desktop"></i></span>
-                                       <h3>Programming<br> Profile</h3>
+                                       <h3>Personal <br> Website</h3>
                                     </div>
                                  </a>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="webDev.html" target="_blank">
+                                 <a href="Course.html" target="_blank">
                                     <div class="services color-2">
                                        <span class="icon2"><i class="fa fa-code"></i></span>
-                                       <h3>Web<br> Designing</h3>
+                                       <h3>Course <br> Projects</h3>
                                     </div>
                                  </a>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="softwareDev.html" target="_blank">
+                                 <a href="Research.html" target="_blank">
                                     <div class="services color-3">
                                        <span class="icon2"><i class="fa fa-terminal"></i></span>
-                                       <h3>Software Development</h3>
+                                       <h3>Research Project</h3>
                                     </div>
                                  </a>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="androidDev.html" target="_blank">
+                                 <a href="Extracurricular.html" target="_blank">
                                     <div class="services color-4">
-                                       <span class="icon2"><i class="fa fa-android"></i></span>
-                                       <h3>Android Applications</h3>
+                                       <span class="icon2"><i class="fa fa fa-user"></i></span>
+                                       <h3>Extracurricular Activities</h3>
                                     </div>
                                  </a>
                               </div>
                            </div>
- -->                           <div class="row">
+                           <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                  <div class="hire">
                                     <h2>You will be happy to know that I have completed over 30+ projects successfully!</h2>
