Small grammar change

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                  <a href="Research.html" target="_blank">
                                     <div class="services color-3">
                                        <span class="icon2"><i class="fa fa-terminal"></i></span>
-                                       <h3>Research Project</h3>
+                                       <h3>Research Projects</h3>
                                     </div>
                                  </a>
                               </div>
