--- a/index.html
+++ b/index.html
@@ -154,7 +154,11 @@
                            <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                  <div class="hire">
-                                    <h2>You will be happy to know that I have completed over 30+ projects successfully!</h2>
+                                    <h2>You will be happy to know that I have completed 30+ projects successfully!</h2><br>
+                                    You can find them hosted on 
+                                    <a href="https://github.com/rs9899?tab=repositories" target="_blank">
+                                    Github
+                                    </a>
                                  </div>
                               </div>
                            </div>
