Index.html completed

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                                  <a href="Course.html" target="_blank">
                                     <div class="services color-2">
-                                       <span class="icon2"><i class="fa fa-code"></i></span>
+                                       <span class="icon2"><i class="fa fa-terminal"></i></span>
                                        <h3>Course <br> Projects</h3>
                                     </div>
                                  </a>
@@ -137,7 +137,7 @@
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                                  <a href="Research.html" target="_blank">
                                     <div class="services color-3">
-                                       <span class="icon2"><i class="fa fa-terminal"></i></span>
+                                       <span class="icon2"><i class="fa fa-globe"></i></span>
                                        <h3>Research Projects</h3>
                                     </div>
                                  </a>
@@ -146,7 +146,7 @@
                                  <a href="Extracurricular.html" target="_blank">
                                     <div class="services color-4">
                                        <span class="icon2"><i class="fa fa fa-user"></i></span>
-                                       <h3>Extracurricular Activities</h3>
+                                       <h3>Extra <br> Curricular</h3>
                                     </div>
                                  </a>
                               </div>
