--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     <h1><strong>Rupesh</span></strong></h1>
                                     <hr>
                                      <p>Hi, Welcome to my interactive Curriculum Vitae.</p>
-                                    <p>I'm a data science engineer and undergraduate student at Indian Institute of Technology, Bombay, major in Computer Science and minor in Statistics.</p>
+				     <p>I'm a data science engineer and undergraduate student at Indian Institute of Technology, Bombay.<br> Major in Computer Science and Minor in Statistics.</p>
                                  </div>
                               </div>
                            </div>
