--- a/index.html
+++ b/index.html
@@ -460,8 +460,15 @@
                         <div class="col-md-12">
                            <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                               <div class="hire">
+<!--                                  <p style="text-align: center"><strong>
+                                    One day I will find the right words, and they will be simple.
+                                 </strong></p> -->
                                  <div align=center>
                                     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
+                                    <a class="bmc-button" target="_blank" href="https://www.goodreads.com/quotes/34531-one-day-i-will-find-the-right-words-and-they">
+                                       <span style="margin-left:5px">
+                                         "One day I will find the right words, and they will be simple." --- Jack Kerouac
+                                       </span></a>
                                     <br><br>
                                     <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/RUPESH5903" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://www.linkedin.com/in/rupesh-r-0418a399" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
