Removed GitHub language distribution

--- a/index.html
+++ b/index.html
@@ -276,12 +276,13 @@
                   <div class="colorlib-narrow-content">
                      <div class="row">
                             <div class="about-desc">
-                           <h1>GitHub Profile Languages </h1>
+                           <h1>GitHub Profile</h1>
+<!--                            <h1>GitHub Profile Languages </h1> -->
                                <h3><span style="color: #f9bf3f">Pie Chart</span></h3>
                             </div>
                      </div>
-                      <iframe width="600" height="600" src="https://ionicabizau.github.io/github-profile-languages/api.html?@rs9899" frameborder="0"></iframe>
-                      <br>
+<!--                       <iframe width="600" height="600" src="https://ionicabizau.github.io/github-profile-languages/api.html?@rs9899" frameborder="0"></iframe>
+                      <br> -->
                       <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
                      <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"/>
                      <div class="calendar"></div>
