--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                             <div class="about-desc">
                            <h1>GitHub Profile</h1>
 <!--                            <h1>GitHub Profile Languages </h1> -->
-                               <h3><span style="color: #f9bf3f">Pie Chart</span></h3>
+<!--                                <h3><span style="color: #f9bf3f">Pie Chart</span></h3> -->
                             </div>
                      </div>
 <!--                       <iframe width="600" height="600" src="https://ionicabizau.github.io/github-profile-languages/api.html?@rs9899" frameborder="0"></iframe>
